# aves

./: .buildinfo  .coveragerc  .editorconfig  .gitignore  LICENSE  Makefile  README.md  SubTasks.ipynb  environment-colab-light.yml  environment-colab.yml  environment.lock.yml  environment.yml  genindex.html  index.html  objects.inv  project_organization.html  pruebas.ipynb  search.html  searchindex.js  setup.cfg  setup.py
_sources/: index.rst.txt  project_organization.rst.txt
_static/: documentation_options.js
docs/: commands.rst  conf.py  eod.rst  index.rst  project_organization.rst  requirements.txt
getting_started/: ENVIRONMENT.html  INSTALL.html  getting_started.html
notebooks/: 01-python-tools.ipynb  02-python-tablas.ipynb  03-python-mapas-preliminario.ipynb  05-python-redes-eod.ipynb  07-python-gridspec.ipynb  Word_cloud.ipynb  extra-00-data-cleaning-casen.ipynb  zorzal-tv-01-mapas.py  zorzal-tv-constitucion.ipynb
scripts/: download_casen_2017.sh  download_casen_2020.sh  download_osm.sh  download_others.sh  download_plebiscito_2020.sh  download_presidenciales_2021_primera_vuelta.sh  download_wiki2vec.sh
source/: aves.data.html  aves.features.html  aves.features.osm.html  aves.features.twokenize.html  aves.html  aves.models.datafusion.html  aves.models.grid.html  aves.models.html  aves.models.network.html  aves.visualization.collections.html  aves.visualization.colors.html  aves.visualization.figures.html  aves.visualization.html  aves.visualization.maps.html  aves.visualization.networks.fdeb.html  aves.visualization.networks.heb.html  modules.html  (+4 more)
(+150 files in other folders)
