[metadata]
name = aves

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[mypy]
files=aves,tests
ignore_missing_imports=true

[tool:pytest]
testpaths=tests/
addopts =
    --cov
    --verbose
norecursedirs =
    dist
    build
    .tox


